--- a/index.html
+++ b/index.html
@@ -150,7 +150,8 @@
                 href='https://www.nebraskamap.gov/datasets/190f9fabe7e6420bb1bb418f72d34715_4/explore?location=41.178362%2C-97.308265%2C6.51'>
                 Nebraska Highway Data</a>,
             <a href='https://github.com/Raruto/leaflet-elevation'> Interactive Map Source github</a>
-            | Cartographers: <a href='https://github.com/daniell23/2023_FinalProject'> Dong Gai</a> (dgai@wisc.edu)
+            | Cartographers: <a href='https://github.com/daniell23/2023_FinalProject'> Dong Gai</a> (dgai@wisc.edu),
+            <a href='https://github.com/felix018jiang'> Yutong Jiang</a> (jiang282@wisc.edu)
             <br>
         </p>
     </div>
