update spelling mistakes

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <style>
     </style>
     <h2 class="title_map" data-assembly-id="116049"><strong>Terrain on the Great Plain: Map of Physical Landscape of
-            Nerbraska</strong>
+            Nebraska</strong>
         <button id="introButton" onclick="openPopup()">Intro</button>
     </h2>
     <p></p>
@@ -41,7 +41,7 @@
 
     <!-- This is the first introduction paragraph -->
     <br>
-    <h2 class="h1"><strong>Breif introduction to Nerbraska</strong></h2>
+    <h2 class="h1"><strong>Breif introduction to Nebraska</strong></h2>
     <div class="container1">
         <img src="img/nebraska2.jpeg" alt="Image" class="image">
         <p class="paragraph">
